--- a/index.html
+++ b/index.html
@@ -7,19 +7,24 @@
 		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
-		<main class="conteudo">
-		<div class = "principal"></div>
-			<div class = "exercicios"></div> <!-- mochila -->
-			 <form action="" class="adicionar" id="novoItem">
-				 <label for="nome">Nome</label>
-				 <input type="text" name="nome" id="nome">
-				 <label for="quantidade">Quantidade</label>
-				 <input type="number" name="quantidade" id="quantidade">
-				  <input type="submit" value="Adicionar" class="cadastrar" id="cadastrar"> 
+		<main class="conteudo">		
+			<div class = "principal"> 
+			<div class="exercicio" id="fotoUsuario">
+    				<input type="file" id="uploadFoto" accept="image/*" style="display:none">
+   					<button id="btnFoto">Enviar Foto</button>
+			</div>	
+				<form action="" class="adicionar" id="novoItem">
+					<label for="nome">Nome do exercício</label>
+					<input type="text" name="nome" id="nome">
+					
+					<label for="quantidade">Quantidade em kg.</label>
+					<input type="number" name="quantidade" id="quantidade">
+
+					<input type="submit" value="Adicionar" class="cadastrar" id="cadastrar"> 
 				</form>	
-		</div>
-		
-			<ul class="lista" id="lista"></ul>
+				
+				<ul class="lista" id="lista"></ul>
+			</div>
 		</main>
 		<script src="js/main.js"> </script>
 	</body>	
