--- a/index.html
+++ b/index.html
@@ -11,16 +11,19 @@
             <h1>Controle Fitness</h1>
 			<hr>
             <br>
-			<label for="dia">Selecione a quantidade de dias de treino:</label>
-			<select id="dia">
-				<option value="1">1 Dia </option>
-                <option value="2">2 Dias </option>
-                <option value="3">3 Dias </option>
-                <option value="4">4 Dias </option>
-                <option value="5">5 Dias </option>
-                <option value="6">6 Dias </option>
-                <option value="7">7 Dias </option>
-			</select>
+            <div class="selecionar">
+                <!-- Seleção de dias de treino -->
+                <label for="dia">Selecione a quantidade de dias de treino:</label>
+                <select id="dia">
+                    <option value="1">1 Dia </option>
+                    <option value="2">2 Dias </option>
+                    <option value="3">3 Dias </option>
+                    <option value="4">4 Dias </option>
+                    <option value="5">5 Dias </option>
+                    <option value="6">6 Dias </option>
+                    <option value="7">7 Dias </option>
+                </select>
+            </div>
 		</div>
         <main class="conteudo">
             <div class="principal"> 
@@ -156,6 +159,12 @@
                 <ul class="lista" id="lista"></ul>
             </div>
         </main>
+
+        <section class="rodape">
+			<p>Controle Fitness &copy; 2025</p>
+			<p>Desenvolvido por <a href="https://github.com/elydaisy" target="_blank">Ely Daisy</a></p>
+			<p>Versão 2.0</p>	
+		</section>
         
         <script src="js/main.js"></script>
     </body>	
