--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
     </head>
     <body>
         <div class="app-titulo">
-            <h1>Controle Fitness</h1>
-			<hr>
-            <br>
-            <div class="selecionar">
+            <div class="app-titulo">
+                <img src="/img/LOGO ORIGINAL.png" alt="Logo Controle Fitness" style="height: 100px; display: block; margin: 0 auto 1em;">
+                <h1>Controle Fitness</h1>
+                <br>
+                <div class="selecionar">
+            </div>
                 <!-- Seleção de dias de treino -->
                 <label for="dia">Selecione a quantidade de dias de treino:</label>
                 <select id="dia">
