--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
                 <img src="/img/LOGO ORIGINAL.png" alt="Logo Controle Fitness" style="height: 100px; display: block; margin: 0 auto 1em;">
                 <h1>Controle Fitness</h1>
                 <br>
+                <h3>Organize seus treinos de forma simples e eficiente!</h3>
                 <div class="selecionar">
-            </div>
                 <!-- Seleção de dias de treino -->
                 <label for="dia">Selecione a quantidade de dias de treino:</label>
                 <select id="dia">
@@ -26,7 +26,6 @@
                     <option value="6">6 Dias </option>
                     <option value="7">7 Dias </option>
                 </select>
-            </div>
 		</div>
         <main class="conteudo">
             <div class="principal"> 
