--- a/index.html
+++ b/index.html
@@ -8,10 +8,23 @@
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
+       <nav>
+    <div class="menu-bar">
+        <h1 class="logo">
+            <a href="home">
+                <img src="/img/LOGO ORIGINAL.png" alt="Logo Controle Fitness" style="height: 50px; vertical-align: middle;">
+            </a>
+        </h1>
+        <ul class="menu">
+            <li><a href="#Sobre">Intro</a></li>
+            <li><a href="#Treinos">Grid One</a></li>
+            <li><button id="toggle-theme">Alternar Tema</button></li>
+        </ul> 
+    </div>
+    </nav>
         <div class="app-titulo">
-            <div class="app-titulo">
+            <div class="app-titulo"> 
                 <img src="/img/LOGO ORIGINAL.png" alt="Logo Controle Fitness" style="height: 100px; display: block; margin: 0 auto 1em;">
-                <h1>Controle Fitness</h1>
                 <br>
                 <h3>Organize seus treinos de forma simples e eficiente!</h3>
                 <div class="selecionar">
