--- a/index.html
+++ b/index.html
@@ -8,26 +8,37 @@
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
-       <nav>
-    <div class="menu-bar">
-        <h1 class="logo">
-            <a href="home">
-                <img src="/img/LOGO ORIGINAL.png" alt="Logo Controle Fitness" style="height: 50px; vertical-align: middle;">
-            </a>
-        </h1>
-        <ul class="menu">
-            <li><a href="#Sobre">Intro</a></li>
-            <li><a href="#Treinos">Grid One</a></li>
-            <li><button id="toggle-theme">Alternar Tema</button></li>
-        </ul> 
-    </div>
-    </nav>
+       <header>
+            <nav>
+                <div class="menu-bar">
+                    <h1 class="logo">
+                        <a href="home">
+                            <img src="/img/LOGO ORIGINAL.png" alt="Logo Controle Fitness" style="height: 50px; vertical-align: middle;">
+                        </a>
+                    </h1>
+                    <button class="menu-toggle" aria-label="Abrir menu">
+                      &#9776;
+                    </button>
+                    <ul class="menu">
+                        <li><a href="#Sobre">Sobre</a></li>
+                        <li><a href="#Treinos">Treinos</a></li>
+                        <li>
+                            <button id="toggle-theme">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-circle-half" viewBox="0 0 16 16">
+                                    <path d="M8 15A7 7 0 1 0 8 1zm0 1A8 8 0 1 1 8 0a8 8 0 0 1 0 16"/>
+                                </svg>
+                            </button>
+                        </li>
+                    </ul> 
+                </div>
+            </nav>
+        </header>
         <div class="app-titulo">
             <div class="app-titulo"> 
-                <img src="/img/LOGO ORIGINAL.png" alt="Logo Controle Fitness" style="height: 100px; display: block; margin: 0 auto 1em;">
-                <br>
+                <h1>Controle Fitness</h1>
                 <h3>Organize seus treinos de forma simples e eficiente!</h3>
-                <div class="selecionar">
+            </div>
+            <div class="selecionar">
                 <!-- Seleção de dias de treino -->
                 <label for="dia">Selecione a quantidade de dias de treino:</label>
                 <select id="dia">
@@ -39,7 +50,7 @@
                     <option value="6">6 Dias </option>
                     <option value="7">7 Dias </option>
                 </select>
-		</div>
+            </div>
         <main class="conteudo">
             <div class="principal"> 
                 <h2>1º Dia</h2>
@@ -181,8 +192,8 @@
         </main>
 
         <section class="rodape">
-			<p>Controle Fitness &copy; 2025</p>
-			<p>Desenvolvido por <a href="https://github.com/elydaisy" target="_blank">Ely Daisy</a></p>
+			<p>Control Birl &copy; 2025</p>
+			<p>Desenvolvido por <a href="https://github.com/elydaisy" target="_blank">Ely Daisy</a>. Todos os direitos reservados.</p>
 			<p>Versão 3.0</p>	
 		</section>
         
