--- a/index.html
+++ b/index.html
@@ -16,20 +16,16 @@
                             <img src="/img/LOGO ORIGINAL.png" alt="Logo Controle Fitness" style="height: 50px; vertical-align: middle;">
                         </a>
                     </h1>
-                    <button class="menu-toggle" aria-label="Abrir menu">
-                      &#9776;
-                    </button>
+                    <button class="menu-toggle" aria-label="Abrir menu">&#9776;</button>
                     <ul class="menu">
                         <li><a href="#Sobre">Sobre</a></li>
                         <li><a href="#Treinos">Treinos</a></li>
-                        <li>
-                            <button id="toggle-theme">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-circle-half" viewBox="0 0 16 16">
-                                    <path d="M8 15A7 7 0 1 0 8 1zm0 1A8 8 0 1 1 8 0a8 8 0 0 1 0 16"/>
-                                </svg>
-                            </button>
-                        </li>
                     </ul> 
+                        <button id="toggle-theme">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-circle-half" viewBox="0 0 16 16">
+                                 <path d="M8 15A7 7 0 1 0 8 1zm0 1A8 8 0 1 1 8 0a8 8 0 0 1 0 16"/>
+                            </svg>
+                        </button>     
                 </div>
             </nav>
         </header>
