--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title> Controle Fitness</title>
+        <title> CTRL Birl</title>
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
@@ -21,11 +21,13 @@
                         <li><a href="#Sobre">Sobre</a></li>
                         <li><a href="#Treinos">Treinos</a></li>
                     </ul> 
+                    <ul>
                         <button id="toggle-theme">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-circle-half" viewBox="0 0 16 16">
                                  <path d="M8 15A7 7 0 1 0 8 1zm0 1A8 8 0 1 1 8 0a8 8 0 0 1 0 16"/>
                             </svg>
-                        </button>     
+                        </button>    
+                    </ul> 
                 </div>
             </nav>
         </header>
@@ -33,7 +35,7 @@
             <div class="app-titulo"> 
                 <h1>Controle Fitness</h1>
                 <h3>Organize seus treinos de forma simples e eficiente!</h3>
-            </div>
+        </div>
             <div class="selecionar">
                 <!-- Seleção de dias de treino -->
                 <label for="dia">Selecione a quantidade de dias de treino:</label>
@@ -188,7 +190,7 @@
         </main>
 
         <section class="rodape">
-			<p>Control Birl &copy; 2025</p>
+			<p>CTRL Birl &copy; 2025</p>
 			<p>Desenvolvido por <a href="https://github.com/elydaisy" target="_blank">Ely Daisy</a>. Todos os direitos reservados.</p>
 			<p>Versão 3.0</p>	
 		</section>
