--- a/index.html
+++ b/index.html
@@ -31,11 +31,12 @@
                 </div>
             </nav>
         </header>
-        <div class="app-titulo">
-            <div class="app-titulo"> 
-                <h1>Controle Fitness</h1>
-                <h3>Organize seus treinos de forma simples e eficiente!</h3>
-        </div>
+        <main class="banner">
+                <div class="app-titulo">
+                <div class="app-titulo"> 
+                    <h1>Controle Fitness</h1>
+                    <h3>Organize seus treinos de forma simples e eficiente!</h3>
+            </div>
             <div class="selecionar">
                 <!-- Seleção de dias de treino -->
                 <label for="dia">Selecione a quantidade de dias de treino:</label>
@@ -49,6 +50,7 @@
                     <option value="7">7 Dias </option>
                 </select>
             </div>
+        </main>
         <main class="conteudo">
             <div class="principal"> 
                 <h2>1º Dia</h2>
